tests/baselines/reference/genericTypeUsedWithoutTypeArguments3.errors.txt
==== tests/cases/compiler/genericTypeUsedWithoutTypeArguments3.ts (1 errors) ====
    interface Foo<T> { }
    interface Bar<T> extends Foo { }
                             ~~~
!!! error TS2314: Generic type 'Foo<T>' requires 1 type argument(s).
    